--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title> Portfolio</title>
+    <title> Keval Solankure</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
